--- a/docs/how-to-contribute.mdx
+++ b/docs/how-to-contribute.mdx
@@ -97,7 +97,7 @@ Then kill the devnet, that's it the `assets/devnet-dump.json` has been updated!
   - `starknet` contains the core logic with crypto hash functions and the main utility classes.
   - `starknet_provider` contains the main package that we use to interact with the Starknet rpc nodes.
   - `secure_store` manages the secure storage of the private key using different methods depending on the platform.
-  - `wallet_kit` is a higher level ui kit to manage wallets and transactions in a flutter app.
+  - `walletkit` is a higher level ui kit to manage wallets and transactions in a flutter app.
 - `/examples` contains examples of apps using the packages. They should be accompanied by a tutorial in the docs to reproduce the app from scratch.
 - `/docs` contains the documentation of the project. Docs are automatically deployed when we merge to main.
 
@@ -119,7 +119,7 @@ Tools need to be at the right version to avoid any incompability:
 
 - [Cairo Compiler Version](https://github.com/starkware-libs/cairo/releases): `2.6.2`
 - [Scarb](https://github.com/software-mansion/scarb/releases): `2.6.2`
-- [Starknet Devnet](https://github.com/0xSpaceShard/starknet-devnet-rs/releases): `0.5.0`
+- [Starknet Devnet](https://github.com/0xSpaceShard/starknet-devnet-rs/releases): `0.1.2`
 - [Starkli](https://github.com/xJonathanLEI/starkli/releases): `0.2.9`
 - [Sierra](https://docs.starknet.io/documentation/starknet_versions/version_notes/): `1.5.0`
 - [Starknet](https://docs.starknet.io/documentation/starknet_versions/version_notes/): `0.13.1.1`
