Add licence file

--- a/docs/packages/avnu_provider.mdx
+++ b/docs/packages/avnu_provider.mdx
@@ -22,6 +22,10 @@ paid by Avnu relayers to execute the transaction. The process is as follows:
 7.  The relayer will execute the transaction, pay the gas fees and the sponsor will be charged for the gas fees.
 8.  (Optional) The sponsor could check their rewards status (using `getSponsorActivity` function) and monitor the rewards usage.
 
+Another use case is, for example, to use the AVNU Paymaster to receive signed transactions from your users and gas in any token to execute them and pay the corresponding gas in STRK or ETH to the sequencer.
+
+Of course, this framework is just the beginning - we encourage developers to leverage these components for their own specialized implementations and innovative solutions.
+
 ## II. Functions.
 
 As a Sponsor, you will be able to use the following functions:
