docs(packages): Move API links from READMEs to documentation pages
- Remove API documentation links from package READMEs:

  - avnu_provider

  - starknet

  - starknet_provider

  - secure_store

  - wallet_kit

- Add API documentation links to corresponding docs pages:

  - docs/packages/avnu_provider.mdx

  - docs/packages/starknet.mdx

  - docs/packages/starknet-provider.mdx

  - docs/packages/secure-store.mdx

  - docs/packages/wallet-kit.mdx

--- a/docs/packages/avnu_provider.mdx
+++ b/docs/packages/avnu_provider.mdx
@@ -8,7 +8,7 @@
 - [IV. How to run tests](#iv-how-to-run-tests)
 
 AVNU Paymaster Provider is a Dart package that provides a way to interact with the AVNU paymaster service.
-
+📚 [API Documentation](https://pub.dev/documentation/avnu_provider/latest/)
 ## I. Introduction
 
 With this provider you (as sponsor) will be able to pay your users' gas fees and you (as a user) will be able to execute gasless transactions sponsored by the sponsor. The user simply signs typed data containing the calls they want to execute. The gas fees in ETH will be paid by Avnu relayers to execute the transaction. The process is as follows:
