--- a/docs/packages/starknet-provider.mdx
+++ b/docs/packages/starknet-provider.mdx
@@ -1,5 +1,5 @@
 # Call read-only method
-
+📚 [API Documentation](https://pub.dev/documentation/starknet_provider/latest/)
 ```dart
 import 'package:starknet/starknet.dart';
 
