Resolve merge conflict in starknet-provider docs

--- a/docs/packages/starknet-provider.mdx
+++ b/docs/packages/starknet-provider.mdx
@@ -1,5 +1,6 @@
-# Call read-only method
+# Starknet Provider Documentation
 📚 [API Documentation](https://pub.dev/documentation/starknet_provider/latest/)
+
 ```dart
 import 'package:starknet/starknet.dart';
 
