docs: add WalletErrorHandler widget in mobile-wallet example source code

--- a/docs/examples/mobile-wallet.mdx
+++ b/docs/examples/mobile-wallet.mdx
@@ -223,6 +223,7 @@ class HomeScreen extends HookConsumerWidget {
           SizedBox(height: 32),
           WalletBody(),
           SendEthButton(),
+          WalletErrorHandler(),
         ],
       ),
     );
