--- a/docs/packages/secure-store.mdx
+++ b/docs/packages/secure-store.mdx
@@ -2,6 +2,7 @@
 
 The secure store is a Flutter allowing to securely store secret on a device, either using a password, or using biometrics.
 
+📚 [API Documentation](https://pub.dev/documentation/secure_store/latest/)
 |         | PasswordStore | BiometricsStore |
 | ------- | ------------- | --------------- |
 | IOS     | ✅            | ✅              |
