--- a/docs/packages/starknet-provider.mdx
+++ b/docs/packages/starknet-provider.mdx
@@ -25,7 +25,7 @@ jq .methods[].name ../starknet-specs/api/starknet_api_openrpc.json
 
 | Name                                     | Implemented |
 | ---------------------------------------- | ----------- |
-| starknet_specVersion                     | ❌          |
+| starknet_specVersion                     | ✅          |
 | starknet_getBlockWithTxHashes            | ✅          |
 | starknet_getBlockWithTxs                 | ✅          |
 | starknet_getBlockWithReceipts            | ✅          |
