docs: Update implementation status of starknet_getTransactionStatus

--- a/docs/packages/starknet-provider.mdx
+++ b/docs/packages/starknet-provider.mdx
@@ -31,7 +31,7 @@ jq .methods[].name ../starknet-specs/api/starknet_api_openrpc.json
 | starknet_getBlockWithReceipts            | ✅          |
 | starknet_getStateUpdate                  | ✅          |
 | starknet_getStorageAt                    | ✅          |
-| starknet_getTransactionStatus            | ❌          |
+| starknet_getTransactionStatus            | ✅          |
 | starknet_getTransactionByHash            | ✅          |
 | starknet_getTransactionByBlockIdAndIndex | ✅          |
 | starknet_getTransactionReceipt           | ✅          |
