docs(wallet_kit): fix README

--- a/docs/packages/wallet-kit.mdx
+++ b/docs/packages/wallet-kit.mdx
@@ -1,2 +1,11 @@
 # Wallet Kit Package
 📚 [API Documentation](https://pub.dev/documentation/wallet_kit/latest/)
+
+**`wallet_kit`** is a Flutter package that makes it easy to integrate **StarkNet wallet** functionalities into your mobile app. 
+It provides secure storage, biometric authentication, wallet management services, and ready-made UI widgets for a smooth dev experience.
+
+## ✨ Features
+
+- 🔐 **Secure storage** and **Biometric authentication** (Face ID, Fingerprint) using the [`secure_store`](https://pub.dev/packages/secure_store) package
+- 🧠 Easy wallet creation, import/export
+- 📦 Modular services and reusable UI components
