Add documentation, remove prints and improve connection handler pattern

--- a/docs/packages/starknet-provider.mdx
+++ b/docs/packages/starknet-provider.mdx
@@ -3,6 +3,8 @@
 A Dart package for interacting with Starknet node using JSON-RPC, following the [Starknet JSON-RPC specification](https://github.com/starkware-libs/starknet-specs.git).
 [Package documentation](https://pub.dev/documentation/starknet_provider/latest/)
 
+Also check [WSS documentation](packages/starknet-provider-wss) for WebSocket support and how-to examples.
+
 ## Transaction support
 
 | Feature        | State | Version |
