avnu_provider: doc update

--- a/docs/packages/avnu_provider.mdx
+++ b/docs/packages/avnu_provider.mdx
@@ -103,7 +103,7 @@ Arguments:
 - `calls`: The list of calls to execute.
 - `gasTokenAddress`: The gas token address. (Optional, this must be excluded if you want to use your rewards)
 - `maxGasTokenAmount`: The max gas token amount. (Optional, this must be excluded if you want to use your rewards)
-- `accountClassHash`: The account class hash.
+- `accountClassHash`: The account class hash. (Optional)
 
 #### 2) `execute(String userAddress, String typedData, List<String> signature, Map<dynamic, dynamic>? deploymentData);`
 Execute transactions.
