--- a/docs/packages/starknet-provider.mdx
+++ b/docs/packages/starknet-provider.mdx
@@ -43,7 +43,7 @@ jq .methods[].name ../starknet-specs/api/starknet_api_openrpc.json
 | starknet_getBlockTransactionCount        | ✅          |
 | starknet_call                            | ✅          |
 | starknet_estimateFee                     | ✅          |
-| starknet_estimateMessageFee              | ❌          |
+| starknet_estimateMessageFee              | ✅          |
 | starknet_blockNumber                     | ✅          |
 | starknet_blockHashAndNumber              | ✅          |
 | starknet_chainId                         | ✅          |
