--- a/docs/examples/nft-marketplace.mdx
+++ b/docs/examples/nft-marketplace.mdx
@@ -12,7 +12,7 @@ flutter create nft_marketplace
 
 Run it locally with `flutter run` to make sure it is properly configured (run on IOS or Android, web and desktop not yet supported).
 
-2. Clone the ark project and run it locally ([follow README instructions](https://github.com/ArkProjectNFTs/ark-project?tab=readme-ov-file#quick-start-for-local-development)):
+2. Clone the ark project and run it locally ([follow README instructions](https://github.com/ArkProjectNFTs/ark-project/blob/main/README.md#quick-start-for-local-development)):
 
 ```sh
 git clone git@github.com:ArkProjectNFTs/ark-project.git
