fix: ArkProject readme instructions link (#544)
* fix: ArkProject readme instructions link

* Update nft-marketplace.mdx

--- a/docs/examples/nft-marketplace.mdx
+++ b/docs/examples/nft-marketplace.mdx
@@ -12,7 +12,7 @@ flutter create nft_marketplace
 
 Run it locally with `flutter run` to make sure it is properly configured (run on IOS or Android, web and desktop not yet supported).
 
-2. Clone the ark project and run it locally ([follow README instructions](https://github.com/ArkProjectNFTs/ark-project/blob/bcd8ce9a6a83eeeb358c102def2f924af03b09a7/README.md?plain=1#L112-L172)):
+2. Clone the ark project and run it locally ([follow README instructions](https://github.com/ArkProjectNFTs/ark-project/blob/main/README.md#quick-start-for-local-development)):
 
 ```sh
 git clone git@github.com:ArkProjectNFTs/ark-project.git
