feat: update Starknet provider to support new tracing methods
* Bumped JSON RPC version from 0.7.1 to 0.8.1 in documentation and README.
* Added support for new tracing methods: `starknet_traceTransaction`, `starknet_simulateTransactions`, and `starknet_traceBlockTransactions`.
* Implemented `TraceProvider` and `JsonRpcTraceProvider` classes for handling tracing functionalities.
* Created models for transaction traces, block transaction traces, and simulation results.
* Added integration tests for the new tracing methods to ensure functionality and error handling.

--- a/docs/packages/starknet-provider.mdx
+++ b/docs/packages/starknet-provider.mdx
@@ -15,7 +15,7 @@ Also check [WSS documentation](packages/starknet-provider-wss) for WebSocket sup
 
 ## Supported JSON RPC methods
 
-### Version: 0.7.1
+### Version: 0.8.1
 
 ### Read methods
 
@@ -48,6 +48,9 @@ jq .methods[].name ../starknet-specs/api/starknet_api_openrpc.json
 | starknet_getStorageProof                 | ✅          |
 | starknet_blockNumber                     | ✅          |
 | starknet_blockHashAndNumber              | ✅          |
+| starknet_traceTransaction                | ✅          |
+| starknet_simulateTransactions            | ✅          |
+| starknet_traceBlockTransactions          | ✅          |
 | starknet_chainId                         | ✅          |
 | starknet_syncing                         | ✅          |
 | starknet_getEvents                       | ✅          |
