--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -10,9 +10,9 @@ The goal of this SDK is to be able to interact with StarkNet smart contracts in 
 ### Transaction
 | Feature        | State              | Version |
 | -------------- | ------------------ | ------- |
-| invoke         | ✅ | 0, 1, 3    |
-| declare        | ✅ | 1, 2, 3    |
-| deploy_account | ✅ | 1, 3       |
+| invoke         | ✅ | 3    |
+| declare        | ✅ | 3    |
+| deploy_account | ✅ | 3       |
 
 ### Supported JSON RPC version: 0.7.1
 [See Starknet Provider supported methods](/packages/starknet-provider#supported-json-rpc-methods)
