--- a/docs/packages/starknet-provider.mdx
+++ b/docs/packages/starknet-provider.mdx
@@ -9,9 +9,9 @@ Also check [WSS documentation](packages/starknet-provider-wss) for WebSocket sup
 
 | Feature        | State | Version |
 | -------------- | ----- | ------- |
-| invoke         | ✅    | 0, 1, 3 |
-| declare        | ✅    | 1, 2, 3 |
-| deploy_account | ✅    | 1, 3    |
+| invoke         | ✅    | 3 |
+| declare        | ✅    | 3 |
+| deploy_account | ✅    | 3    |
 
 ## Supported JSON RPC methods
 
