Fixes following PR review

--- a/docs/packages/starknet-provider.mdx
+++ b/docs/packages/starknet-provider.mdx
@@ -48,9 +48,6 @@ jq .methods[].name ../starknet-specs/api/starknet_api_openrpc.json
 | starknet_getStorageProof                 | ✅          |
 | starknet_blockNumber                     | ✅          |
 | starknet_blockHashAndNumber              | ✅          |
-| starknet_traceTransaction                | ✅          |
-| starknet_simulateTransactions            | ✅          |
-| starknet_traceBlockTransactions          | ✅          |
 | starknet_chainId                         | ✅          |
 | starknet_syncing                         | ✅          |
 | starknet_getEvents                       | ✅          |
@@ -70,3 +67,17 @@ jq .methods[].name ../starknet-specs/api/starknet_write_api.json
 | starknet_addDeclareTransaction       | ✅          |
 | starknet_addDeployAccountTransaction | ✅          |
 
+
+### Trace API Methods
+
+Name of methods have been extracted from [starknet-specs](https://github.com/starkware-libs/starknet-specs.git) with the following command:
+
+```bash
+jq .methods[].name ../starknet-specs/api/starknet_trace_api_openrpc.json
+```
+
+| Name                                 | Implemented |
+| ------------------------------------ | ----------- |
+| starknet_traceTransaction            | ✅          |
+| starknet_simulateTransactions        | ✅          |
+| starknet_traceBlockTransactions      | ✅          |
